Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -14,6 +14,7 @@
             android:drawablePadding="@dimen/px20"
             android:textSize="@dimen/font_28px"
             android:text="一分钟了解小教室"
+            android:gravity="center_horizontal"
             android:textColor="@color/font_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -27,6 +28,7 @@
             android:drawableTop="@drawable/ic_class_paused"
             android:drawablePadding="@dimen/px20"
             android:textSize="@dimen/font_28px"
+            android:gravity="center_horizontal"
             android:text="一分钟了解小教室"
             android:textColor="@color/font_white"
             app:layout_constraintBottom_toBottomOf="parent"
