--- a/app/src/main/res/layout/activity_classroom2.xml
+++ b/app/src/main/res/layout/activity_classroom2.xml
@@ -21,10 +21,21 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/chat_gray"
+            android:layout_marginBottom="@dimen/px100"
             app:layout_constraintTop_toBottomOf="@id/replace_lay"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+    <include layout="@layout/layout_classroom2_main_bottom_control"
+             android:layout_width="0dp"
+             android:layout_height="@dimen/px100"
+             app:layout_constraintTop_toBottomOf="@id/bottom_lay"
+             app:layout_constraintLeft_toLeftOf="parent"
+             app:layout_constraintRight_toRightOf="parent"
+             app:layout_constraintBottom_toBottomOf="parent"
+             />
 
     <include
             layout="@layout/layout_classroom2_one2one_confirm"
