--- a/app/src/main/res/layout/fragment_classroom2_chat_session.xml
+++ b/app/src/main/res/layout/fragment_classroom2_chat_session.xml
@@ -4,7 +4,7 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              android:background="@color/white"
-                                             >
+        >
 
     <TextView
             android:id="@+id/title"
@@ -27,7 +27,8 @@
             android:drawableLeft="@drawable/ic_back"
             android:padding="@dimen/px28"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
 
     <ImageView
             android:id="@+id/more_btn"
@@ -36,7 +37,9 @@
             android:src="@drawable/ic_more"
             android:padding="@dimen/px28"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
     <View
             android:id="@+id/title_line"
             android:layout_width="0dp"
@@ -110,7 +113,8 @@
             app:layout_constraintTop_toBottomOf="@id/bottom_line"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/send_btn"/>
+            app:layout_constraintRight_toLeftOf="@id/send_btn"
+            />
 
 
 </android.support.constraint.ConstraintLayout>
