--- a/app/src/main/res/layout/fragment_classroom2_choose_class.xml
+++ b/app/src/main/res/layout/fragment_classroom2_choose_class.xml
@@ -59,15 +59,24 @@
                 app:layout_constraintRight_toRightOf="parent"
                 />
 
+        <include
+                layout="@layout/layout_base2_page_status_tips"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/top_line"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                />
+
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/rlist"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:dividerHeight="@dimen/px1"
                 android:scrollbars="none"
                 android:divider="@color/hor_divide_line"
-                app:layout_constraintTop_toTopOf="@+id/top_line"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/top_line"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"/>
 
