--- a/app/src/main/res/layout/fragment_classroom2_databaselist.xml
+++ b/app/src/main/res/layout/fragment_classroom2_databaselist.xml
@@ -98,4 +98,14 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <include
+            layout="@layout/layout_base2_page_status_tips"
+            android:layout_height="0dp"
+            android:layout_width="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/search_bottom_line"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
 </android.support.constraint.ConstraintLayout>
