--- a/app/src/main/res/layout/fragment_classroom2_download_list.xml
+++ b/app/src/main/res/layout/fragment_classroom2_download_list.xml
@@ -6,6 +6,7 @@
         >
 
     <android.support.constraint.ConstraintLayout
+            android:id="@+id/cl_root"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/px88"
