--- a/app/src/main/res/layout/fragment_classroom2_idle.xml
+++ b/app/src/main/res/layout/fragment_classroom2_idle.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white">
 
 
     <FrameLayout
-        android:id="@+id/layout_idle_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+            android:id="@+id/layout_idle_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     <ImageView
-        android:id="@+id/iv_whiteboard_preview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        />
+            android:id="@+id/iv_whiteboard_preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            />
 
     <include
             layout="@layout/layout_classroom2_lesson_tips"
