--- a/app/src/main/res/layout/fragment_classroom2_memberlist.xml
+++ b/app/src/main/res/layout/fragment_classroom2_memberlist.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
+
              android:layout_width="match_parent"
              android:layout_height="match_parent"
         >
 
     <android.support.constraint.ConstraintLayout
+            android:id="@+id/cl_root"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/px88"
@@ -47,6 +49,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 />
 
+
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/member_list"
                 android:layout_width="0dp"
@@ -58,6 +61,16 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"/>
+
+        <include
+                layout="@layout/layout_base2_page_status_tips"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/top_line"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                />
 
     </android.support.constraint.ConstraintLayout>
 
