--- a/app/src/main/res/layout/fragment_contact2_classrooms.xml
+++ b/app/src/main/res/layout/fragment_contact2_classrooms.xml
@@ -17,6 +17,17 @@
             android:dividerHeight="@dimen/px1"
             android:listSelector="@color/transparent"
             android:scrollbars="none"/>
+
+    <cn.xiaojs.xma.ui.contact2.LetterIndexView
+            android:id="@+id/letter_index"
+            android:layout_width="@dimen/px30"
+            android:layout_height="@dimen/px559"
+            android:layout_gravity="center_vertical|right"
+            android:layout_marginRight="@dimen/px21"
+            android:background="#00000000"
+
+            android:visibility="visible"/>
+
 </FrameLayout>
 
 
