--- a/app/src/main/res/layout/layout_material_download_item.xml
+++ b/app/src/main/res/layout/layout_material_download_item.xml
@@ -81,4 +81,10 @@
             android:layout_marginLeft="@dimen/px24"
             />
 
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/px1"
+            android:background="@color/gray_line"
+            android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
