--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -261,4 +261,9 @@
         <item>教室</item>
         <item>课程</item>
     </string-array>
+
+    <string-array name="board_manager_operate">
+        <item>重命名</item>
+        <item>删除</item>
+    </string-array>
 </resources>
