--- a/app/src/main/res/layout/layout_classroom2_chat_sendout.xml
+++ b/app/src/main/res/layout/layout_classroom2_chat_sendout.xml
@@ -55,7 +55,7 @@
             android:layout_marginLeft="@dimen/chat_item_content_rl"
             android:layout_toLeftOf="@id/avator"
             android:layout_below="@id/name"
-            android:background="@drawable/cr_chat_my_speaker_bg"
+            android:background="@drawable/class_chatbg2"
             android:visibility="gone"
             />
 
