--- a/app/src/main/res/layout/fragment_contact2_classrooms.xml
+++ b/app/src/main/res/layout/fragment_contact2_classrooms.xml
@@ -25,8 +25,7 @@
             android:layout_gravity="center_vertical|right"
             android:layout_marginRight="@dimen/px21"
             android:background="#00000000"
-
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
 </FrameLayout>
 
