--- a/app/src/main/res/layout/layout_classroom2_member_item.xml
+++ b/app/src/main/res/layout/layout_classroom2_member_item.xml
@@ -48,4 +48,10 @@
             android:layout_alignLeft="@id/name"
             android:layout_below="@id/name"
             />
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/px1"
+            android:background="@color/gray_line"
+            android:layout_alignParentBottom="true"
+            />
 </RelativeLayout>
