--- a/app/src/main/res/layout/layout_contact2_classrooms_item.xml
+++ b/app/src/main/res/layout/layout_contact2_classrooms_item.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<cn.xiaojs.xma.ui.widget.CheckableRelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/root_lay"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+    <CheckedTextView
+            android:id="@+id/check_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="@dimen/px25"
+            android:checkMark="@drawable/multi_check_selector"
+            android:visibility="gone"
+            />
 
 
     <cn.xiaojs.xma.ui.classroom2.widget.ColorIconTextView
             android:id="@+id/avator"
             android:layout_width="@dimen/px89"
             android:layout_height="@dimen/px89"
-            android:layout_alignParentLeft="true"
+            android:layout_toRightOf="@id/check_view"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/px25"
             android:layout_marginTop="@dimen/px20"
@@ -50,4 +61,4 @@
             android:singleLine="true"
             android:ellipsize="end"
             />
-</RelativeLayout>
+</cn.xiaojs.xma.ui.widget.CheckableRelativeLayout>
