--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -215,9 +215,9 @@
         <item>按时间倒序排序</item>
     </string-array>
     <string-array name="classroom2_more_item">
-        <item>教室设置</item>
         <item>分享</item>
-        <item>教室详情</item>
+        <item>详情</item>
+        <item>设置</item>
     </string-array>
     <string-array name="classroom2_add_student">
         <item>手机号添加</item>
