--- a/app/src/main/res/layout/layout_classroom2_control_land.xml
+++ b/app/src/main/res/layout/layout_classroom2_control_land.xml
@@ -49,7 +49,7 @@
             app:layout_constraintTop_toTopOf="@id/top_guideline"
             />
 
-    <TextView
+    <cn.xiaojs.xma.ui.view.AnimationTextView
             android:id="@+id/l_top_roominfo"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
@@ -103,7 +103,7 @@
             android:id="@+id/l_bottom_session"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:src="@drawable/ic_class_chatlist_hide"
+            android:src="@drawable/ic_class_chatlist_display"
             android:layout_marginLeft="@dimen/px20"
             app:layout_constraintTop_toTopOf="@id/bottom_guideline"
             app:layout_constraintBottom_toBottomOf="parent"
