--- a/app/src/main/res/layout/layout_classroom2_control_port.xml
+++ b/app/src/main/res/layout/layout_classroom2_control_port.xml
@@ -105,6 +105,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:visibility="gone"/>
 
+    <cn.xiaojs.xma.ui.view.AnimationView
+            android:id="@+id/p_bottom_animationing"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/class_living_animation"
+            android:layout_marginLeft="@dimen/px21"
+            app:layout_constraintLeft_toRightOf="@id/p_bottom_avator"
+            app:layout_constraintTop_toTopOf="@id/bottom_guideline"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone"/>
+
     <TextView
             android:id="@+id/p_bottom_class_name"
             android:layout_width="0dp"
@@ -112,10 +124,10 @@
             android:textColor="@color/font_class_name"
             android:textSize="@dimen/font_30px"
             android:layout_marginRight="@dimen/px10"
-            android:layout_marginLeft="@dimen/px21"
+            android:layout_marginLeft="@dimen/px10"
             app:layout_constraintTop_toTopOf="@id/bottom_guideline"
             app:layout_constraintRight_toLeftOf="@id/p_bottom_orient"
-            app:layout_constraintLeft_toRightOf="@id/p_bottom_avator"
+            app:layout_constraintLeft_toRightOf="@id/p_bottom_animationing"
             app:layout_constraintBottom_toBottomOf="parent"
             />
 
