白板样式调整；白板外打开资料库调整

--- a/app/src/main/res/layout/fragment_classroom_board_collaborate.xml
+++ b/app/src/main/res/layout/fragment_classroom_board_collaborate.xml
@@ -58,6 +58,7 @@
         android:layout_centerHorizontal="true"
         android:background="@drawable/bg_wb_tool_panel"
         android:gravity="center_vertical"
+        android:layout_marginBottom="@dimen/px15"
         android:orientation="horizontal">
 
         <ImageView
